Fix to layout issue

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -59,8 +59,7 @@ body {
 
       .competencies {
 
-        display: inline-block;
-        margin-bottom: 20px;
+        margin: 20px;
 
         h2 {
           text-align: center;
